Fixed the misaligned "Visit sbml.org for more info" line at the bottom of the page.

--- a/docs/src/css/libsbml-doxygen-stylesheet.css
+++ b/docs/src/css/libsbml-doxygen-stylesheet.css
@@ -1236,7 +1236,11 @@ only screen and (min-device-pixel-ratio: 2) {
     content: "Developer's guide for version ";
 }
 
-.navpath li.footer a {
+li.footer {
+    margin-top: 0;
+}
+
+li.footer a {
     font-weight: 700;
 }
 
